Fix linebreak on small tablets

--- a/css/styles.css
+++ b/css/styles.css
@@ -63,6 +63,10 @@ header h1 {
     margin: 1em 0 1em 0;
 }
 
+.small-tablets {
+    display: none;
+}
+
 /* Mobile style rules for nav */
 nav ul {
     list-style-type: none;
@@ -259,14 +263,15 @@ footer a {
     nav {
         clear: left;
         margin-top: 3em;
+        
     }
 }
 
-/* Media query for large tablets */
-@media screen and (min-width: 750px) {
+/* Media query for ONLY small tablets */
+@media screen and (min-width: 500px) and (max-width: 749px) {
     /* Remove line break in subtitle and nav area */
     .small-tablets {
-        display: none;
+        display: block;
     }
 }
 
